methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: value avance is not a member of Unit
  avance();avance();faireV();avance();avance();gauche();avance()avance();faireV();avance();avance();gauche();avance();avance();faireV();avance();avance();gauche();avance();avance();faireV();avance();avance();gauche()
                                                                ^